# VulkanShaderCUDA

./: CMakeLists.txt  LICENSE  README.md  add.comp  add.glsl  add.spv  add_grad.comp  cleanup.bat  compile_shaders.bat  compile_shaders.sh  conv2d.comp  conv2d.glsl  conv2d.spv  dummy.bat  dummy.comp  matmul.comp  matmul.glsl  matmul.spv  matmul_grad.comp  merge_comps.bat  merge_comps.py  merge_srccpp.bat  merge_srccpp.py  merge_srch.bat  merge_srch.py  mergedforllm.comp  mergedforllm.txt  mergedforllmcomps.txt  mergedforllmcppfiles.txt  mergedforllmhfiles.txt  mul.comp  pooling.comp  pooling.glsl  pooling.spv  relu.comp  relu.glsl  relu.spv  setup.py  setup_vulkan_project.bat  sigmoid.comp  (+10 more)
comp/: add.comp  add_grad.comp  batchnorm.comp  conv2d.comp  matmul.comp  matmul_grad.comp  mul.comp  pooling.comp  relu.comp  sigmoid.comp  softmax.comp
shaders/: add.spv  conv2d.spv  matmul.spv  mul.spv  pooling.spv  relu.spv  sigmoid.spv  softmax.spv
src/: CommandBufferManager.cpp  CommandBufferManager.h  DescriptorSetManager.cpp  DescriptorSetManager.h  OnnxModelParser.cpp  OnnxModelParser.h  PipelineManager.cpp  PipelineManager.h  PushConstants.h  ShaderManager.cpp  ShaderManager.h  Utils.h  VulkanBufferPool.cpp  VulkanBufferPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDeviceHelper.h  VulkanError.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanOperations.cpp  VulkanOperations.h  VulkanSync.cpp  VulkanSync.h  VulkanTensor.cpp  VulkanTensor.h  vulkan_backend.cpp  vulkan_backend_bindings.cpp  vulkan_globals.cpp  vulkan_globals.h
